[package]
edition = "2024"
name = "modern-robotics"
readme = "README.md"
version = "0.1.2"

[dependencies]
assert_float_eq = "1.1.4"
nalgebra = "0.34.0"

[lib]
name = "modern_robotics"
path = "src/lib.rs"

[[test]]
name = "test_utils"
path = "tests/test_utils.rs"

[[test]]
name = "test_rigid_body_motions"
path = "tests/test_rigid_body_motions.rs"

[[test]]
name = "test_forward_kinematics"
path = "tests/test_forward_kinematics.rs"

[[test]]
name = "test_inverse_kinematics"
path = "tests/test_inverse_kinematics.rs"

[[test]]
name = "test_dynamics_of_open_chains"
path = "tests/test_dynamics_of_open_chains.rs"

[[test]]
name = "test_trajectory_generation"
path = "tests/test_trajectory_generation.rs"
